Revisions to Google Analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 {% include seo.html %}
 
 <!-- Link to Google Analytics in analytics.html -->
-{% if jekyll.environment == 'production' %}
+{% if site.google_analytics and jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
 
