--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,6 @@
 {% endif %}
 
 <!-- Google analytics code -->
-{% if jekyll.environment == 'production' %}
+{% if site.google_analytics and jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
