--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,12 @@
   {% endfor %}
 {% endif %}
 
-<!-- Google analytics code -->
-{% if site.google_analytics and jekyll.environment == 'production' %}
-{% include analytics.html %}
-{% endif %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173522486-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-173522486-1');
+</script>
