--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,20 +13,9 @@
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
 
-<!--[if IE]>
-  <style>
-    /* old IE unsupported flexbox fixes */
-    .greedy-nav .site-title {
-      padding-right: 3em;
-    }
-    .greedy-nav button {
-      position: absolute;
-      top: 0;
-      right: 0;
-      height: 100%;
-    }
-  </style>
-<![endif]-->
+<!-- Social media card -->
+{/* twitter */}
+<meta name="twitter:image" content="/assets/images/alan_turing_npg_cc.png" />
 
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
