--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,9 @@
   {% endfor %}
 {% endif %}
 
+<!--SEO tagging -->
+{% seo %}
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173522486-1"></script>
 <script>
