--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="page__footer-follow">
   <hr>
   <a href="http://cbd.cmu.edu" target="_blank"><img align = "left" src="../assets/images/CMU_CBD_logos.png" alt="CBD Logo" width="35%" height="35%"></a>
-  <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" width="100%" height="100%" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+  <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" width="100%" height="100%" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
   <a href="http://mmbios.pitt.edu" target="_blank"><img align="right" src="../assets/images/MMBioS_Logo.png" alt="MMBioS Logo" width="45%" height="45%"></a>
 </div>
