removing cell spacing and padding

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <div class="page__footer-follow">
 </table>
-<table>
+<table cellspacing="0" cellpadding="0">
   <tr>
 <td><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a></td>
     <td style="color:black">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</a></td>
   </tr>
 </table>
-  <table>
+  <table cellspacing="0" cellpadding="0">
 <tbody>
 <tr>
 <td><a href="http://cbd.cmu.edu" target="_blank"><img src="../assets/images/CMU_CBD_logos.png" alt="CBD Logo"></a></td>
