remove table boundary

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <td style="color:black">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</a></td>
   </tr>
 </table>
-  <table cellspacing="0" cellpadding="0">
+  <table cellspacing="0" cellpadding="0"b>
 <tbody>
 <tr>
 <td><a href="http://cbd.cmu.edu" target="_blank"><img src="../assets/images/CMU_CBD_logos.png" alt="CBD Logo"></a></td>
