--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,7 @@
 <div class="page__footer-follow">
-</table>
-<table cellspacing="0" cellpadding="0">
-  <tr>
-<td><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a></td>
-    <td style="color:black">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</a></td>
-  </tr>
-</table>
-  <table cellspacing="0" cellpadding="0"b>
-<tbody>
-<tr>
-<td><a href="http://cbd.cmu.edu" target="_blank"><img src="../assets/images/CMU_CBD_logos.png" alt="CBD Logo"></a></td>
-<td><a href="http://mmbios.pitt.edu" target="_blank"><img src="../assets/images/MMBioS_Logo.png" alt="MMBioS Logo"></a></td>
-</tr>
-</tbody>
+  <a href="http://cbd.cmu.edu" target="_blank"><img src="../assets/images/CMU_CBD_logos.png" width = "50%" height = "50%" align="left" alt="CBD Logo">
+  <a href="http://mmbios.pitt.edu" target="_blank"><img src="../assets/images/MMBioS_Logo.png" width = "40%" height = "40%" align="right" alt="MMBioS Logo"></a>
+  <br>
+  <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+  <p style = "color:black">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</a>
 </div>
