--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
   <a href="http://cbd.cmu.edu" target="_blank"><img src="../assets/images/CMU_CBD_logos.png" width = "40%" height = "40%" align="left" alt="CBD Logo">
   <a href="http://mmbios.pitt.edu" target="_blank"><img src="../assets/images/MMBioS_Logo.png" width = "50%" height = "50%" align="right" alt="MMBioS Logo"></a>
   </div>
+  <center>
   <table>
     <tr>
       <td><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
@@ -12,4 +13,6 @@
           <p style = "color:black"><small>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</small></a>
         </td>
       </tr>
+  </table>
+  </center>
 </div>
