Moving lightbox to single.html

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -57,6 +57,9 @@ layout: default
         {% include page__date.html %}
       </footer>
 
+      <script type="text/javascript" src="/js/lightbox.js"></script>
+<link rel="stylesheet" href="/css/lightbox.css">
+
       {% if page.share %}{% include social-share.html %}{% endif %}
 
       {% include post_pagination.html %}
