--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,10 @@
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css">
 
+<!-- Set favicon -->
+
+<link rel="shortcut icon" type="image/png" href="assets/favicon.png">
+
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
     <script src="{{ script | relative_url }}"></script>
