trying form in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,15 @@
+<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/mwkrayyn" method="post">
+  <fieldset id="fs-frm-inputs">
+    <label for="full-name">Your Name</label>
+    <label for="email-address">Email Address</label>
+    <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+    <label for="message">Type Your Message</label>
+    <textarea rows="5" name="message" id="message" placeholder="Type your message here." required=""></textarea>
+    <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+  </fieldset>
+  <input type="submit" value="Submit">
+</form>
+
 <div class="page__footer-follow">
   <hr>
   <div>
