--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <input type="text" name="name" id="last-name" placeholder="Last" required="">
     <label for="email-address">Email Address</label>
     <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
-    <label for="message">Type Your Message</label>
+    <label for="message">Your Message (optional)</label>
     <textarea rows="5" name="message" id="message" placeholder="Type your message here." required=""></textarea>
     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
   </fieldset>
