--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,13 @@
 <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/mwkrayyn" method="post">
   <fieldset id="fs-frm-inputs">
     <label for="full-name">First Name</label>
-    <input type="text" name="name" id="first-name" placeholder="First" required="">
+    <input type="text" name="name" id="first-name" placeholder="First">
     <label for="full-name">Last Name</label>
-    <input type="text" name="name" id="last-name" placeholder="Last" required="">
+    <input type="text" name="name" id="last-name" placeholder="Last">
     <label for="email-address">Email Address</label>
     <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
     <label for="message">Your Message (optional)</label>
-    <textarea rows="5" name="message" id="message" placeholder="Type your message here." required=""></textarea>
+    <textarea rows="5" name="message" id="message" placeholder="Type your message here."></textarea>
     <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
   </fieldset>
   <input type="submit" value="Submit">
