--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/mwkrayyn" method="post">
   <fieldset id="fs-frm-inputs">
-    <label for="full-name">First Name</label>
+    <label for="full-name">First Name (optional)</label>
     <input type="text" name="name" id="first-name" placeholder="First">
-    <label for="full-name">Last Name</label>
+    <label for="full-name">Last Name (optional)</label>
     <input type="text" name="name" id="last-name" placeholder="Last">
     <label for="email-address">Email Address</label>
     <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
