--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       <td><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
         </td>
         <td>
-          <p style = "color:black"><small>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</small></a>
+          <p style = "color:black"><small>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</small></a>
         </td>
         <td>
           <a href="https://forms.gle/egmmBxGtBciDPYNS8" target="_blank"><img src="../assets/images/600px/survey.png" width = "40%" height = "40%" align="right"></a>
