--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 
 <!-- Set favicon -->
 
-<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+<link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
 
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
