attempt font change color

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -48,6 +48,7 @@
 
   .current {
     font-weight: bold;
+    color: #f00;
   }
 }
 
@@ -275,7 +276,7 @@
     }
 
     .dropdown-content a:not(:last-child){
-      border-bottom: none; 
+      border-bottom: none;
     }
   }
 
