--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -471,7 +471,7 @@
     padding-left: 0.5em;
     padding-right: 0.5em;
     font-weight: bold;
-    color: #f00
+    color: #f00;
   }
 
   @include breakpoint(max-width($large - 1px)) {
