--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -4,16 +4,22 @@
  * Licensed under MIT (https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE)
 */
 
-/* NoahL: Inserted to remove sidebar 
+/* NoahL: Inserted to remove sidebar
 article.page {
     float: left;
     width: 100%;
 } */
 
+/*Centering figure images*/
+figure img {
+  margin:auto;
+}
+
+
 /* Edited for YouTube embed issues */
 iframe {
   display: block;
-  padding: 0px 10px 25px; 
+  padding: 0px 10px 25px;
 }
 
 /* Two columns side by side */
