adding target=blank and shortenint link

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -40,9 +40,9 @@ layout: default
         <aside class="sidebar__right sticky">
     
           <!-- Call to Action Buttons (always visible) -->
-          <a href="https://leanpub.com/biologicalmodeling" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="">Get the E-Book (now only $9.95!)</a>
+          <a href="https://leanpub.com/biologicalmodeling" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="_blank">Get the E-Book ($9.95)</a>
 
-          <a href="https://www.amazon.com/dp/B0BT6B2B8W" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="">Get the Print Book</a>
+          <a href="https://www.amazon.com/dp/B0BT6B2B8W" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="_blank">Get the Print Book</a>
       
           <!-- Table of Contents (if present) -->
           {% if page.toc %}
