--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -108,12 +108,15 @@ layout: default
 
 <!-- Popup HTML -->
 <div id="book-popup" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px; background-color: #fff; border: 1px solid #ccc; z-index: 9999;">
-  <h3>Buy the Book</h3>
-  <p>Choose your preferred format:</p>
-  <a href="https://leanpub.com/biologicalmodeling" target="_blank" style="margin-right: 10px;">Buy e-Book</a>
-  <a href="https://www.amazon.com/dp/B0BT6B2B8W" target="_blank">Buy Print Book</a>
+  <h3>Get our book!</h3>
+  <p>We are so glad that you are enjoying our course! You can help support the project's development by picking up a portable print companion.</p>
+  <a href="https://leanpub.com/biologicalmodeling" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="_blank">Get the E-Book</a>
+
+  <a href="https://www.amazon.com/dp/B0BT6B2B8W" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="_blank">Get the Print Book</a>
   <br><br>
-  <button onclick="closePopup()">Close</button>
+  <center>
+    <button onclick="closePopup()">Close</button>
+  </center>
 </div>
 <div id="popup-overlay" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 9998;"></div>
 
