Few modifications to popup

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -108,9 +108,9 @@ layout: default
 
 <!-- Popup HTML -->
 <div id="book-popup" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px; background-color: #fff; border: 1px solid #ccc; z-index: 9999;">
-  <h3>Get our book!</h3>
-  <p>We are so glad that you are enjoying our course! You can help support the project's development by picking up a portable print companion.</p>
-  <a href="https://leanpub.com/biologicalmodeling" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="_blank">Get the E-Book</a>
+  <h3>Get our book</h3>
+  <p>We are so glad that you are enjoying our course! You can help support this project's development by picking up the textbook companion, which is available in both E-book and printed formats.</p>
+  <a href="https://leanpub.com/biologicalmodeling" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="_blank">Get the E-Book (just $9.95!)</a>
 
   <a href="https://www.amazon.com/dp/B0BT6B2B8W" class="btn btn--primary btn--large" style="font-size: 100%; text-align: center;" target="_blank">Get the Print Book</a>
   <br><br>
