trying better padding for nav list

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -360,6 +360,8 @@
 
 .nav__list {
   margin-bottom: 1.5em;
+  padding: 1rem 1.5rem !important;
+  line-height: 1.7 !important;
 
   input[type="checkbox"],
   label {
