--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -69,6 +69,13 @@ iframe {
   background-color: #555;
 }
 
+// ------------------------------------------------------------
+// Custom widths for both sidebars
+// ------------------------------------------------------------
+$right-sidebar-width-narrow: 260px;   // shows ≥ 1024 px
+$right-sidebar-width:        360px;   // shows ≥ 1280 px
+$right-sidebar-width-wide:   460px;   // if you use .wide pages
+
 
 /* Variables */
 @import "minimal-mistakes/variables";
