--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <hr>
   <div>
   <a href="http://cbd.cmu.edu" target="_blank"><img src="../assets/images/600px/CMU_CBD_logos.png" width = "40%" height = "40%" align="left" alt="CBD Logo">
-  <a href="http://mmbios.pitt.edu" target="_blank"><img src="../assets/images/600px/MMBioS_Logo.png" width = "50%" height = "50%" align="right" alt="MMBioS Logo"></a>
+  <!--<a href="http://mmbios.pitt.edu" target="_blank"><img src="../assets/images/600px/MMBioS_Logo.png" width = "50%" height = "50%" align="right" alt="MMBioS Logo"></a>-->
   </div>
   <center>
   <table>
