trying more right padding

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,8 +15,8 @@ search: false
 /* === More space to the left of the main content column === */
 @media (min-width: 1024px) {
     .page__content {
-      padding-left: 50px;  // adjust this to your liking
-      padding-right: 50px;  // adjust this to your liking
+      padding-left: 50px;
+      padding-right: 200px;
     }
   }
   
