--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,7 +16,7 @@ search: false
 @media (min-width: 1024px) {
     .page__content {
       padding-left: 50px;
-      padding-right: 50px;
+      margin-right: 50px;
     }
   }
   
