make footer blank

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
-<div class="page__footer-follow">
+<!-- <div class="page__footer-follow">
   <hr>
   <div>
   <a href="http://cbd.cmu.edu" target="_blank"><img src="../assets/images/600px/CMU_CBD_logos.png" width = "40%" height = "40%" align="left" alt="CBD Logo">
-  <!--<a href="http://mmbios.pitt.edu" target="_blank"><img src="../assets/images/600px/MMBioS_Logo.png" width = "50%" height = "50%" align="right" alt="MMBioS Logo"></a>-->
   </div>
   <center>
   <table>
@@ -19,3 +18,4 @@
   </table>
   </center>
 </div>
+-->
