--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,9 @@ search: false
 
 @charset "utf-8";
 
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes"; // main partials
+
 /* Trying font size changes
 .page__lead {
     font-family: $global-font-family;
@@ -20,20 +23,19 @@ search: false
     }
   }
 
+  :root { --sidebar-gap: 2rem; }   /* change once, use everywhere */
+
   /* ≥ 1024 px  (sidebar is 200 px) */
-@media (min-width: 64em) {
-  .sidebar__right {            /* still sticky, still floats right   */
-    margin-right: calc(-200px - var(--sidebar-gap)) !important;
+  @media (min-width: 64em) {
+    .sidebar__right {            /* still sticky, still floats right   */
+      margin-right: calc(-200px - var(--sidebar-gap));
+    }
   }
-}
-
-/* ≥ 1280 px  (sidebar is 300 px) */
-@media (min-width: 80em) {
-  .sidebar__right {
-    margin-right: calc(-300px - var(--sidebar-gap)) !important;
-  }
-}
   
-
-@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@import "minimal-mistakes"; // main partials
+  /* ≥ 1280 px  (sidebar is 300 px) */
+  @media (min-width: 80em) {
+    .sidebar__right {
+      margin-right: calc(-300px - var(--sidebar-gap));
+    }
+  }
+  
