Updates to social shares

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -58,19 +58,19 @@ layout: default
           <div class="social-share-icons" style="margin-top: 1rem; text-align: center;">
             <p><strong>Share this page</strong></p>
             <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absolute_url }}" target="_blank" rel="noopener" style="margin: 0 0.5rem;">
-              <i class="fab fa-linkedin fa-2x"></i>
+              <i class="fab fa-linkedin fa-lg"></i>
             </a>
             <a href="https://twitter.com/intent/tweet?url={{ page.url | absolute_url }}" target="_blank" rel="noopener" style="margin: 0 0.5rem;">
-              <i class="fab fa-twitter fa-2x"></i>
+              <i class="fab fa-x-twitter fa-lg"></i>
             </a>
             <a href="https://www.reddit.com/submit?url={{ page.url | absolute_url }}" target="_blank" rel="noopener" style="margin: 0 0.5rem;">
-              <i class="fab fa-reddit fa-2x"></i>
+              <i class="fab fa-reddit fa-lg"></i>
             </a>
             <a href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | absolute_url }}" target="_blank" rel="noopener" style="margin: 0 0.5rem;">
-              <i class="fab fa-facebook fa-2x"></i>
+              <i class="fab fa-facebook fa-lg"></i>
             </a>
             <a href="{{ page.url | absolute_url }}" target="_blank" rel="noopener" style="margin: 0 0.5rem;">
-              <i class="fas fa-link fa-2x"></i>
+              <i class="fas fa-link fa-lg"></i>
             </a>
           </div> 
         </aside>    
