--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,15 @@ search: false
   }
 */
 
+/* Change color of social share icons*/
+.social-share-icons i {
+  color: #555; /* Dark gray */
+}
+
+.social-share-icons i:hover {
+  color: #222; /* Even darker on hover */
+}
+
 /* Main content is too low. The following fixes move it up to be level with the sidebars. */
 @media (min-width: 64em) {   /* 64 em ≈ 1024 px */
   .page__content            { padding-top: 0 !important; }
