Make share text bigger

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -56,7 +56,7 @@ layout: default
           </center>
           {% endunless %}
           <div class="social-share-icons" style="margin-top: 1rem; text-align: center;">
-            <p><strong><em>Share us!</em></strong></p>
+            <h2><strong><em>Share us!</em></strong></h2>
           
             {% assign linkedin_text = "Check out this free educational website on biological modeling. It's ideal for students, educators, and science lovers." | url_encode %}
             {% assign x_text = "Check out this awesome free educational platform on biological modeling!" | url_encode %}
